[package]
name = "vtt-translate"
version = "0.1.0"
edition = "2021"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
uuid = { version = "1.3.1", features = ["v4"] }
tokio = { package = "tokio", version = "1.0", features = [
    "macros",
    "rt-multi-thread",
] }
serde = { version = "1", features = [ "derive" ] }
clap = { version = "4.2.7", features = ["derive", "env"] }
anyhow = "1.0.71"
